[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
name = "slcan-bridge"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
embassy-stm32 = { version = "*", path = "../embassy/embassy-stm32", features = ["defmt", "stm32f746zg", "unstable-pac", "memory-x", "time-driver-any"]  }
embassy-sync = { version = "*", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "*", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "*", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "*", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "*", path = "../embassy/embassy-futures" }
heapless = { version = "0.8", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-hal = { version = "1.0.0" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.0"
#slcan-parser = { git = "https://github.com/gpgreen/slcan-parser.git", branch = "main", version = "0.1.0" }
slcan-parser = { path = "../slcan-parser", features = ["defmt"] }
embedded-can = "0.4.1"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
